[package]
name = "consensus-bft"
version = "0.0.1"
authors = ["Eason Gao <kaoimin@qq.com>", "Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
license = "MIT"

[dependencies]
arraymap = "0.1.1"
bft-rs = { git = "https://github.com/KaoImin/bft-rs.git", rev = "5102f3fcbd50f81bf0b4ea46a7d2864cc0d6711b" }
crossbeam = "0.7"
log = "0.4.3"
lru-cache = "0.1"
rlp = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
criterion = "0.2"
rand = "0.5.5"

[features]
default = ["verify_req"]
verify_req = ["bft-rs/verify_req"]
