[package]
name = "consensus-bft"
version = "0.0.1"
authors = ["Eason Gao <kaoimin@qq.com>", "Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
license = "MIT"

[dependencies]
arraymap = "0.1.1"
bincode = "1.1"
bft-core = { git = "https://github.com/KaoImin/bft-core.git", branch = "develop" }
crossbeam = "0.7"
log = "0.4.3"
lru-cache = "0.1"
rlp = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"

[dev-dependencies]
criterion = "0.2"
env_logger = "0.6"
rand = "0.5.5"

[features]
default = ["async_verify"]
async_verify = ["bft-core/async_verify"]

[[bench]]
name = "example"
path = "benches/bench.rs"
harness = false
