[package]
name = "consensus-bft"
version = "0.0.1"
authors = ["Eason Gao <kaoimin@qq.com>", "Cryptape Technologies <contact@cryptape.com>"]
edition = "2018"
license = "MIT"

[dependencies]
bft-core = { git = "https://github.com/KaoImin/bft-core.git", branch = "develop" }
crossbeam-channel = "0.3"
crossbeam-utils = "0.6"
log = "0.4.3"
lru-cache = "0.1"
rlp = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
blake2b_simd = "0.4"
criterion = "0.2"
env_logger = "0.6"
rand = "0.5.5"

[features]
default = ["async_verify"]
turbo_hash = ["async_verify"]
async_verify = ["bft-core/async_verify"]

[[bench]]
name = "benches"
path = "benches/bench.rs"
harness = false

[[example]]
name = "solo"
path = "examples/solo.rs"
